--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.6",
     "expo-av": "~13.2.1",
+    "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.4",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.11",
-    "expo-splash-screen": "~0.18.1"
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "sharp-cli": "^4.1.0"
   },
   "private": true
 }
