--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-av": "~13.2.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "hanzi": "^2.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.4",
