--- a/package.json
+++ b/package.json
@@ -6,29 +6,27 @@
     "bulid": "eas build -p android --profile preview",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build-web": "expo build:web"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/art": "^1.2.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "date-fns": "^2.30.0",
     "expo": "~48.0.6",
     "expo-av": "~13.2.1",
-    "expo-splash-screen": "~0.18.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "hanzi": "^2.1.5",
+    "netlify-cli": "^14.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-pie": "^1.1.2",
-    "react-native-pie-chart": "^2.1.1",
-    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.11",
     "zustand": "^4.3.6"
