--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "build-web": "expo build:web"
+    "build-web": "expo build:web",
+    "netlify-deploy": "netlify deploy --prod"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
